--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
-*.iml
-.gradle
 /local.properties
+
+#IntelliJ IDEA folders
+.idea
 /.idea/caches/build_file_checksums.ser
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
-.DS_Store
+
+#IntelliJ IDEA files
+*.iml
+
+#Build dir
 /build
+.gradle
+
+.DS_Store
 /captures
 .externalNativeBuild
