--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.klimo.myapplication">
+		  package="com.example.klimo.myapplication">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/donut_icon"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:label="@string/newGame">
+	<application
+			android:allowBackup="true"
+			android:icon="@mipmap/ic_launcher"
+			android:label="@string/app_name"
+			android:roundIcon="@drawable/donut_icon"
+			android:supportsRtl="true"
+			android:theme="@style/AppTheme">
+		<activity
+				android:name="ru.rienel.cookie_clicker_blockchain_android.MainActivity"
+				android:label="@string/newGame">
 
-        </activity>
-        <activity android:name=".ShopActivity"
-            android:label="@string/shopTitle">
-        </activity>
-        <activity android:name=".StartGameActivity"
-            android:label="@string/gameTitle">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+		</activity>
+		<activity
+				android:name="ru.rienel.cookie_clicker_blockchain_android.ShopActivity"
+				android:label="@string/shopTitle">
+		</activity>
+		<activity
+				android:name="ru.rienel.cookie_clicker_blockchain_android.StartGameActivity"
+				android:label="@string/gameTitle">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".StatisticsActivity"
-            android:label="@string/statistic">
-        </activity>
-    </application>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+		<activity
+				android:name="ru.rienel.cookie_clicker_blockchain_android.StatisticsActivity"
+				android:label="@string/statistic">
+		</activity>
+	</application>
 
 </manifest>
