--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.example.klimo.myapplication">
+		  package="ru.rienel.cookie_clicker_blockchain_android">
 
 	<application
 			android:allowBackup="true"
