--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="ru.rienel.cookie_clicker_blockchain_android">
+		  package="ru.rienel.clicker">
 
 	<application
 			android:allowBackup="true"
@@ -10,16 +10,16 @@
 			android:supportsRtl="true"
 			android:theme="@style/AppTheme">
 		<activity
-				android:name="ru.rienel.cookie_clicker_blockchain_android.MainActivity"
+				android:name="ru.rienel.clicker.MainActivity"
 				android:label="@string/newGame">
 
 		</activity>
 		<activity
-				android:name="ru.rienel.cookie_clicker_blockchain_android.ShopActivity"
+				android:name="ru.rienel.clicker.ShopActivity"
 				android:label="@string/shopTitle">
 		</activity>
 		<activity
-				android:name="ru.rienel.cookie_clicker_blockchain_android.StartGameActivity"
+				android:name="ru.rienel.clicker.StartGameActivity"
 				android:label="@string/gameTitle">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -28,7 +28,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-				android:name="ru.rienel.cookie_clicker_blockchain_android.StatisticsActivity"
+				android:name="ru.rienel.clicker.StatisticsActivity"
 				android:label="@string/statistic">
 		</activity>
 	</application>
