[-] New layout for start activity, added new icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
 		</activity>
 		<activity android:name=".activity.NetworkActivity">
 		</activity>
+		<activity android:name=".activity.preference.PreferencesActivity"/>
 	</application>
 
 </manifest>
