[-] Add client, server, send/receive class for direct connection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
 		<activity android:name=".activity.NetworkActivity">
 		</activity>
 		<activity android:name=".activity.preference.PreferencesActivity"/>
+		<activity android:name=".activity.MultiplayerActivity"/>
 	</application>
 
 </manifest>
