--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
-before_script:
-  - apt-get update -qq && apt-get install -y -qq gradle
-  - gradle -v
-  - which gradle
+#before_script:
+#  - apt-get update -qq && apt-get install -y -qq gradle
+#  - gradle -v
+#  - which gradle
 
-build:
-  script:
-    - gradle -v
-    - gradle -i -s build
+#build:
+#  script:
+#    - gradle -v
+#    - gradle -i -s build
