[-] Add Up navigation button and tool bar with update icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
 		<activity
 				android:name=".activity.MultiplayerActivity"/>
 		<activity
+				android:parentActivityName=".activity.MainActivity"
+				android:label="Opponents"
 				android:name=".activity.OpponentsActivity"/>
 	</application>
 
