--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/local.properties
+local.properties
 
 #IntelliJ IDEA folders
 .idea
@@ -13,6 +13,10 @@
 #Build dir
 /build
 .gradle
+gradlew
+gradlew.bat
+*/gradle/wrapper
+
 
 .DS_Store
 /captures
