[#1] Testing CI/CD №1

--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@ local.properties
 
 #Build dir
 /build
-.gradle
-gradlew
-gradlew.bat
-*/gradle/wrapper
+#.gradle
+#gradlew
+#gradlew.bat
+#*/gradle/wrapper
 
 
 .DS_Store
