[#1] Testing CI/CD №3      Changed .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,5 +39,5 @@ assembleDebug:
   - ./gradlew assembleDebug
   artifacts:
     paths:
-    - app/build/*.apk
+    - app/build/
     name: "Coockie-clicker"
