--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/local.properties
+local.properties
 
 #IntelliJ IDEA folders
 .idea
@@ -13,7 +13,7 @@
 #Build dir
 /build
 .gradle
-gradle/wrapper/*
+
 
 .DS_Store
 /captures
