--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,13 @@
 				android:name=".service.NetworkService"/>
 
 		<activity
-				android:name=".activity.GameActivity"
+				android:name=".activity.game.GameActivity"
 				android:label="@string/newGame"/>
 		<activity
-				android:name=".activity.ShopActivity"
+				android:name=".activity.shop.ShopActivity"
 				android:label="@string/shopTitle"/>
 		<activity
-				android:name=".activity.MainActivity"
+				android:name=".activity.main.MainActivity"
 				android:label="@string/gameTitle">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -43,17 +43,17 @@
 			</intent-filter>
 		</activity>
 		<activity
-				android:name=".activity.StatisticsActivity"
+				android:name=".activity.statistics.StatisticsActivity"
 				android:label="@string/statistic">
 		</activity>
 		<activity
 				android:name=".activity.preference.PreferencesActivity"/>
 		<activity
-				android:name=".activity.MultiplayerActivity"/>
+				android:name=".activity.multiplayer.MultiplayerActivity"/>
 		<activity
-				android:parentActivityName=".activity.MainActivity"
+				android:parentActivityName=".activity.main.MainActivity"
 				android:label="Opponents"
-				android:name=".activity.OpponentsActivity"/>
+				android:name=".activity.opponents.OpponentsActivity"/>
 	</application>
 
 </manifest>
