--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,24 +3,24 @@
 		  package="ru.rienel.clicker">
 
 	<uses-permission
-			android:name="android.permission.ACCESS_COARSE_LOCATION"
-			android:required="true"/>
-	<uses-permission
 			android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission
-			android:name="android.permission.ACCESS_WIFI_STATE"
-			android:required="true"/>
+			android:required="true"
+			android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission
-			android:name="android.permission.INTERNET"
-			android:required="true"/>
+			android:required="true"
+			android:name="android.permission.ACCESS_WIFI_STATE"/>
 	<uses-permission
-			android:name="android.permission.CHANGE_WIFI_STATE"
-			android:required="true"/>
+			android:required="true"
+			android:name="android.permission.INTERNET"/>
+	<uses-permission
+			android:required="true"
+			android:name="android.permission.CHANGE_WIFI_STATE"/>
 
 	<application
 			android:allowBackup="true"
-			android:icon="@mipmap/ic_launcher"
 			android:label="@string/app_name"
+			android:icon="@drawable/donut_icon"
 			android:roundIcon="@drawable/donut_icon"
 			android:supportsRtl="true"
 			android:theme="@style/AppTheme">
@@ -48,8 +48,6 @@
 		</activity>
 		<activity
 				android:name=".activity.preference.PreferencesActivity"/>
-		<activity
-				android:name=".activity.multiplayer.MultiplayerActivity"/>
 		<activity
 				android:parentActivityName=".activity.main.MainActivity"
 				android:label="Opponents"
