[#14] Network service not stop working after closing app, extracted WifiAppBroadcastReceiver from Network service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
 			android:supportsRtl="true"
 			android:theme="@style/AppTheme">
 		<service
-				android:name=".service.NetworkService"/>
+				android:name=".service.NetworkService"
+				android:stopWithTask="true"/>
 
 		<activity
 				android:name=".activity.game.GameActivity"
