--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
+    
     //    implementation 'com.google.dagger:dagger:2.4'
     //    annotationProcessor 'com.google.dagger:dagger-compiler:2.4'
 }
