--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     // GSON
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
 
     //    implementation 'com.google.dagger:dagger:2.4'
     //    annotationProcessor 'com.google.dagger:dagger-compiler:2.4'
